Set to default-repo localhost:5000/skaffold

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -5,6 +5,9 @@ metadata:
 build:
   artifacts:
     - image: pyjokes
+      sync:
+        infer:
+          - '**/*.py'
 deploy:
   kubectl:
     manifests:
