--- a/k8s-manifests/service.yaml
+++ b/k8s-manifests/service.yaml
@@ -4,8 +4,8 @@ metadata:
   name: pyjokes-svc
 spec:
   ports:
-    - name: http
-      port: 80
+    - port: 80
       targetPort: 5000
+  type: LoadBalancer
   selector:
     app: pyjokes-app
