--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,22 +3,23 @@ name: CI
 on: [push]
 
 jobs:
-  setup:
+  ci:
     runs-on: ubuntu-latest
+
+  setup:
     steps:
       - uses: actions/checkout@v2
       - run: ./scripts/setup.sh
   build:
     needs: setup
-    runs-on: 'ubuntu-latest'
     steps:
       - uses: actions/checkout@v2
       - run: |
+          pwd
           ./scripts/build.sh
           ./scripts/test.sh
   shutdown:
     needs: build
-    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
       - run: ./scripts/clean.sh
